--- a/.gitignore
+++ b/.gitignore
@@ -176,4 +176,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+/key
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,node,vscode
